<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="parking"
            type="com.example.myparking.viewmodels.ParkingItemViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greyBg"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.ParkingDetailsActivity"
        tools:showIn="@layout/activity_parking_details">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/parking_main_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:cardElevation="4dp"
                app:layout_constraintBottom_toTopOf="@+id/horaire"
                app:layout_constraintTop_toTopOf="parent"
                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{parking.getName()}"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/parking_address"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@{parking.getAddress()}"
                        android:textSize="14sp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/topper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >

                        <TextView
                            android:id="@+id/opened"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text='@{parking.getOuvert()}'
                            android:textColor='@{parking.isOuvert() ? @color/authorized: @color/colorPrimary}'
                            android:textSize="14sp"
                            android:gravity="start"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/capacity"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/capacity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="80dp"
                            android:gravity="start"
                            android:text="@{parking.getParking().getCapacity()}"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/opened"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/icon_travel_mean"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@{ parking.getParking().isWalkable() ? @drawable/ic_walking_person : @drawable/ic_car}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/distance"
                            app:layout_constraintTop_toTopOf="parent"

                            />

                        <TextView
                            android:id="@+id/distance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@{parking.getParking().getDistance()}"
                            android:textColor="@color/info"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/walk_time"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/walk_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{parking.getParking().getTime()}"
                            android:textSize="14sp"
                            android:gravity="end"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView> <!-- general info -->

            <TextView
                android:id="@+id/horaire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/horaire"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/parking_horaire_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parking_main_info" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/parking_horaire_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toTopOf="@+id/tarifs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horaire">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/horaire_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>


            </com.google.android.material.card.MaterialCardView> <!-- horaire card -->

            <TextView
                android:id="@+id/tarifs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/tarifs"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/parking_tarifs_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parking_horaire_info" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/parking_tarifs_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toTopOf="@+id/paiement"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tarifs">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tarifs_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>


            </com.google.android.material.card.MaterialCardView> <!-- tarifs card -->

            <TextView
                android:id="@+id/paiement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/paiement"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/parking_paiement_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parking_tarifs_info" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/parking_paiement_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toTopOf="@id/equipement"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paiement">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/paiement_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>


            </com.google.android.material.card.MaterialCardView> <!-- paiement card -->


            <TextView
                android:id="@+id/equipement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/equipements"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/parking_equipement_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parking_paiement_info" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/parking_equipement_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toTopOf="@+id/terms"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/equipement">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/equipement_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>


            </com.google.android.material.card.MaterialCardView> <!-- equipement card -->

            <TextView
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/termes_et_conditions"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/parking_terms_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parking_equipement_info" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/parking_terms_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="56dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/terms">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/terms_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>


            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>